import { tagAutoGenerated } from '../generator/utils/auto-text';

describe('tagAutoGenerated', () => {
  describe('basic functionality', () => {
    it('should add auto-generated header to text', () => {
      const text = 'export const test = true;';
      const result = tagAutoGenerated(text);

      expect(result).toContain('AUTO-GENERATED FILE');
      expect(result).toContain(text);
      expect(result).toContain('This file was automatically generated');
    });

    it('should include model name when provided', () => {
      const text = 'export class User {}';
      const result = tagAutoGenerated(text, 'User');

      expect(result).toContain('Generated from model: User');
      expect(result).toContain(text);
    });

    it('should include generator name when provided', () => {
      const text = 'export class User {}';
      const result = tagAutoGenerated(text, undefined, 'DTO Generator');

      expect(result).toContain('by the DTO Generator generator');
      expect(result).toContain(text);
    });

    it('should include both model name and generator name', () => {
      const text = 'export class User {}';
      const result = tagAutoGenerated(text, 'User', 'DTO Generator');

      expect(result).toContain('Generated from model: User');
      expect(result).toContain('by the DTO Generator generator');
      expect(result).toContain(text);
    });

    it('should not include timestamp by default', () => {
      const text = 'export class User {}';
      const result = tagAutoGenerated(text, 'User', 'DTO Generator');

      expect(result).not.toContain('Generated at:');
    });

    it('should include timestamp when addTimestamp is true', () => {
      const text = 'export class User {}';
      const result = tagAutoGenerated(text, 'User', 'DTO Generator', true);

      expect(result).toContain('Generated at:');
      expect(result).toMatch(/Generated at: \d{4}-\d{2}-\d{2}T\d{2}:\d{2}:\d{2}/);
    });
  });

  describe('edge cases', () => {
    it('should handle empty string', () => {
      const result = tagAutoGenerated('');

      expect(result).toContain('AUTO-GENERATED FILE');
      expect(result).toContain('\n');
    });

    it('should handle multiline text', () => {
      const text = `export class User {
  id: string;
  name: string;
}`;
      const result = tagAutoGenerated(text, 'User');

      expect(result).toContain(text);
      expect(result).toContain('Generated from model: User');
    });

    it('should handle text with special characters', () => {
      const text = 'export const test = "@#$%^&*()";';
      const result = tagAutoGenerated(text);

      expect(result).toContain(text);
      expect(result).toContain('AUTO-GENERATED FILE');
    });

    it('should handle text with backticks', () => {
      const text = 'export const test = `template string`;';
      const result = tagAutoGenerated(text);

      expect(result).toContain(text);
    });

    it('should handle undefined model name', () => {
      const text = 'export const test = true;';
      const result = tagAutoGenerated(text, undefined);

      expect(result).toContain(text);
      expect(result).not.toContain('Generated from model:');
    });

    it('should handle empty model name', () => {
      const text = 'export const test = true;';
      const result = tagAutoGenerated(text, '');

      expect(result).toContain(text);
      // Empty string is truthy, so it will output "Generated from model: " (with space, no model name)
      expect(result).toContain('Generated from model:');
    });

    it('should handle undefined generator name', () => {
      const text = 'export const test = true;';
      const result = tagAutoGenerated(text, 'User', undefined);

      expect(result).toContain(text);
      expect(result).toContain('Generated from model: User');
      expect(result).not.toContain('by the');
    });

    it('should handle very long text', () => {
      const text = 'export const test = ' + '"'.repeat(1000) + ';';
      const result = tagAutoGenerated(text);

      expect(result).toContain(text);
      expect(result).toContain('AUTO-GENERATED FILE');
    });
  });

  describe('formatting', () => {
    it('should have proper header format', () => {
      const text = 'export const test = true;';
      const result = tagAutoGenerated(text);

      expect(result).toMatch(/^\/\*\*\s*\n \* AUTO-GENERATED FILE/);
      expect(result).toContain('*/');
      expect(result).toContain(text);
    });

    it('should preserve original text exactly', () => {
      const text = '  export class User {\n    id: string;\n  }';
      const result = tagAutoGenerated(text);

      const textStartIndex = result.indexOf(text);
      expect(textStartIndex).toBeGreaterThan(-1);
      // Text should be preserved exactly as-is (no trailing newline added)
      expect(result.slice(textStartIndex)).toBe(text);
    });

    it('should have consistent formatting with all parameters', () => {
      const text = 'export class User {}';
      const result = tagAutoGenerated(text, 'User', 'Generator', true);

      const lines = result.split('\n');
      expect(lines[0]).toContain('/**');
      expect(lines[1]).toContain('* AUTO-GENERATED FILE');
      // Find the line with */ (not necessarily second to last due to optional fields)
      const closeCommentLine = lines.find((line) => line.trim() === '*/');
      expect(closeCommentLine).toBeDefined();
      // Text should be the last line after the closing comment
      expect(result).toContain(text);
      expect(lines[lines.length - 1]).toBe(text);
    });
  });

  describe('snapshot tests', () => {
    it('should match snapshot with no parameters', () => {
      const text = 'export const test = true;';
      const result = tagAutoGenerated(text);

      expect(result).toMatchSnapshot();
    });

    it('should match snapshot with model name', () => {
      const text = 'export class User {}';
      const result = tagAutoGenerated(text, 'User');

      expect(result).toMatchSnapshot();
    });

    it('should match snapshot with all parameters', () => {
      // Mock Date.prototype.toISOString to return a fixed timestamp for consistent snapshots
      const toISOStringSpy = jest.spyOn(Date.prototype, 'toISOString').mockReturnValue('2025-01-01T00:00:00.000Z');

      const text = `export class User {
  id: string;
  name: string;
}`;
      const result = tagAutoGenerated(text, 'User', 'DTO Generator', true);

      expect(result).toMatchSnapshot();

      // Restore Date mock
      toISOStringSpy.mockRestore();
    });

    it('should match snapshot with complex TypeScript code', () => {
      const text = `import { ApiProperty } from '@nestjs/swagger';

export class UserResponseDto {
  @ApiProperty()
  id: string;

  @ApiProperty({ required: false })
  name?: string | undefined;
}`;
      const result = tagAutoGenerated(text, 'User', 'DTO Generator');

      expect(result).toMatchSnapshot();
    });
  });
});
