// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`tagAutoGenerated snapshot tests should match snapshot with all parameters 1`] = `
"/**
 * AUTO-GENERATED FILE
 * This file was automatically generated by the DTO Generator generator.
 * Do not edit this file manually. Instead, modify the Prisma schema and regenerate.
 * Generated from model: User
 * Generated at: 2025-01-01T00:00:00.000Z
 */
export class User {
  id: string;
  name: string;
}"
`;

exports[`tagAutoGenerated snapshot tests should match snapshot with complex TypeScript code 1`] = `
"/**
 * AUTO-GENERATED FILE
 * This file was automatically generated by the DTO Generator generator.
 * Do not edit this file manually. Instead, modify the Prisma schema and regenerate.
 * Generated from model: User
 */
import { ApiProperty } from '@nestjs/swagger';

export class UserResponseDto {
  @ApiProperty()
  id: string;

  @ApiProperty({ required: false })
  name?: string | undefined;
}"
`;

exports[`tagAutoGenerated snapshot tests should match snapshot with model name 1`] = `
"/**
 * AUTO-GENERATED FILE
 * This file was automatically generated.
 * Do not edit this file manually. Instead, modify the Prisma schema and regenerate.
 * Generated from model: User
 */
export class User {}"
`;

exports[`tagAutoGenerated snapshot tests should match snapshot with no parameters 1`] = `
"/**
 * AUTO-GENERATED FILE
 * This file was automatically generated.
 * Do not edit this file manually. Instead, modify the Prisma schema and regenerate.
 */
export const test = true;"
`;
